@@ -1,3 +1,5 @@
+* Add MultiSelection entries to Dict field
+
 Version 5.2.6 - 2019-09-15
 * Bug fixes (see mercurial logs for details)
 
